@@ -106,6 +106,7 @@
 - added: `res.imagefs(storage_name, id, image_make_fn, [headers], [callback])` returns file from FileStorage
 - added: `res.imagenosql(db_name, id, image_make_fn, [headers], [callback])` returns file from NoSQL binary
 - added: new stats `F.stats.performance` contains count of `request` and `file` per minute
+- added: new method `controller.operation(name, value, [callback], [options])` for evaluating of operation
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
 - updated: `GROUP()` by adding a new argument `url_prefix`
@@ -134,6 +135,7 @@
 - updated: decreased a maximum count of keys to `33` from `69` when the query string is parsing
 - updated: extended `schema.required(name, (model, workflow) => workflow.update)`, more in docs.
 - updated: `$MAKE(schema, model, [filter/workflows], ...)` supports `workflows` (array or object) instead of filter for `schema.required()`
+- updated: `OPERATION()` by adding `controller`
 
 - fixed: mail attachments
 - fixed: mail `message.manually()`
